function finder styling and fixing issue where search box is not showing black text

--- a/helpserver/assets/helpserver-main.css
+++ b/helpserver/assets/helpserver-main.css
@@ -181,7 +181,7 @@ border-radius: 3px;
 background: #fff;
 padding: 6px;
 font-size: 14px;
-color: #000;
+color: #000 !important;
 outline: none;
 width: 200px;
 }
@@ -486,4 +486,30 @@ color:#000;
     content: "Site Announcement: ";
     font-weight: bold;
     color: #505026;
+}
+
+#searchFilter {
+    border: 1px solid #ddd;
+    border-radius: 3px;
+    background: #fff;
+    padding: 6px;
+    font-size: 14px;
+    color: #000 !important;
+    outline: none;
+}
+
+#searchResults {
+    font-size: 16px;
+    padding-top:20px;
+    padding-bottom:20px;
+}
+
+.twoColumn {
+    columns: 2;
+}
+
+@media screen and (max-width: 800px) {
+    .twoColumn {
+        columns: 1;
+    }
 }
